#154 : Fix Gradle build